--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,18 @@
         android:theme="@style/Theme.Unite3"
         tools:targetApi="31">
         <activity
+            android:name=".Uyg11"
+            android:exported="false" />
+        <activity
+            android:name=".Uyg10"
+            android:exported="false" />
+        <activity
+            android:name=".Uyg9"
+            android:exported="false" />
+        <activity
+            android:name=".Uyg8"
+            android:exported="false" />
+        <activity
             android:name=".Uyg7"
             android:exported="false" />
         <activity
